# stream-dia2

./: .gitignore  .gitmodules  pyproject.toml  realtime_dia2_server.py  requirements.txt  setup.sh  stream_dia2_client.py  test_mimi.py
backup_streaming_v1/: ENGINEERING_HANDOFF.md  ENGINEERING_HANDOFF_1213.md  __main__.py  basic_example.md  engineering_handoff_1212.md  realtime_dia2_server.py  realtime_dia2_server_simple.py  streaming.md  test_client.py  test_client_simple.py
backup_streaming_v1/dia2/: .gitignore  LICENSE  README.md  input.txt  onespeaker.txt  onespeaker2.txt  pyproject.toml  s2.txt  script1.txt  test.py
backup_streaming_v1/dia2/runtime/: audio_io.py  context.py  script_parser.py  streaming_generator.py
dia2/audio/: codec.py
dia2/runtime/: streaming_generator.py
stream_dia2_client/: __main__.py  pyproject.toml
