[project]
name = "stream-dia2"
version = "0.1.0"
description = "FastAPI streaming server for Dia2 TTS, plus CLI WebSocket client"
requires-python = ">=3.10"
authors = [
  { name = "runvnc" }
]

# Runtime deps for the server
dependencies = [
  "dia2 @ git+https://github.com/nari-labs/dia2.git",
  # IMPORTANT: use a specific tag/commit that matches the layout we cloned locally.
  # Using the root of the repo ensures `dia2.core` exists.
  "dia2 @ git+https://github.com/nari-labs/dia2.git",
  "fastapi",
  "uvicorn[standard]",
  "numpy",
  "torch",
  "websockets",
  "sounddevice",
]

[project.optional-dependencies]
server = [
  "fastapi",
  "uvicorn[standard]",
  "numpy",
  "torch",
]
client = [
  "websockets",
  "sounddevice",
  "numpy",
]

[project.scripts]
stream-dia2-client = "stream_dia2_client.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["stream_dia2_client"]

# Added Dia2 from GitHub as a dependency
# NOTE: uv/pip will install from this repo URL.
