[project]
name = "stream-dia2"
version = "0.1.0"
description = "FastAPI streaming server for Dia2 TTS, plus CLI WebSocket client"
requires-python = ">=3.10"
authors = [
  { name = "runvnc" }
]

dependencies = [
  "dia2",
  "fastapi",
  "uvicorn[standard]",
  "numpy",
  "torch",
  "websockets",
  "sounddevice",
]

[project.optional-dependencies]
server = [
  "fastapi",
  "uvicorn[standard]",
  "numpy",
  "torch",
]
client = [
  "websockets",
  "sounddevice",
  "numpy",
]

[project.scripts]
stream-dia2-client = "stream_dia2_client.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["stream_dia2_client"]

[tool.uv]
package = true

[tool.uv.sources]
dia2 = { path = "dia2_repo", editable = true }

# PyTorch CUDA wheels
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
