[project]
name = "stream-dia2"
version = "0.1.0"
description = "FastAPI streaming server for Dia2 TTS, plus CLI WebSocket client"
requires-python = ">=3.10"
authors = [
  { name = "runvnc" }
]

dependencies = [
  # dia2 dependencies (vendored)
  "torch>=2.8.0,<2.9.0",
  "numpy>=2.1.0,<3.0",
  "transformers>=4.55.3",
  "safetensors==0.5.3",
  "huggingface-hub>=0.24.7",
  "sphn>=0.2.0",
  "soundfile>=0.12.1",
  "whisper-timestamped>=1.14.2",
  # server dependencies
  "fastapi",
  "uvicorn[standard]",
  "websockets",
  "sounddevice",
]

[project.optional-dependencies]
server = [
  "fastapi",
  "uvicorn[standard]",
]
client = [
  "websockets",
  "sounddevice",
  "numpy",
]

[project.scripts]
stream-dia2-client = "stream_dia2_client.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["stream_dia2_client*", "dia2*"]

[tool.uv]
package = true

# PyTorch CUDA wheels
[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
